# traceweave

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_question.md
.github/workflows/: ci.yml
docs/: patchgym-traces.md
examples/: trace.jsonl
src/traceweave/: __init__.py  cli.py  core.py
tests/: test_traceweave.py
